@@ -90,13 +90,13 @@ class TemperatureController(TacoDevice, HasLimits, HasOffset, Moveable):
         'setpoint':  Param('Current temperature setpoint', unit='main',
                            category='general'),
         'controlchannel': Param('Control channel (A-D)',
-                                type=oneof(str, 'A', 'B', 'C', 'D'),
+                                type=oneof('A', 'B', 'C', 'D'),
                                 category='general', settable=True),
         'samplechannel':  Param('Sample channel (A-D)',
-                                type=oneof(str, 'A', 'B', 'C', 'D'),
+                                type=oneof('A', 'B', 'C', 'D'),
                                 category='general', settable=True),
         'mode':      Param('Control mode (manual, zone or openloop)',
-                           type=oneof(str, 'manual', 'zone', 'openloop'),
+                           type=oneof('manual', 'zone', 'openloop'),
                            settable=True),
         'p':         Param('The P control parameter', settable=True,
                            type=float, category='general'),
