@@ -47,6 +47,8 @@ Changelog for NICOS 2
   - Added "coordinates" parameter to slits to select the coordinate
     convention for right/left, bottom/top axes.
 
+  - Removed first ("converter") argument from parameter type "oneof".
+
 **Release 2.0.1**
 
   - In "ImageStorage", made sure the data file isn't overwritten unless
